<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outrosLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AtletaOutrosFragment">

    <EditText
        android:id="@+id/etNomeOutros"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:hint="@string/etNome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#131313"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etBairroOutros"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/etBairro"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#1B1B1B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeOutros" />

    <EditText
        android:id="@+id/etDataOutros"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/etData"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etBairroOutros" />

    <EditText
        android:id="@+id/etAcademiaOutros"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/etAcademiaOutros"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataOutros" />

    <TextView
        android:id="@+id/tvOutros"
        android:layout_width="211dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/tvOutros"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSegundoOutros"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="164dp"
        android:ems="10"
        android:hint="@string/etSegundoOutros"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCadastrarO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/btnCadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>